fixed bugs with gap fillers overflowing/moving during resize or drag. Also cleaned up a few things

--- a/examples/example-styles.css
+++ b/examples/example-styles.css
@@ -22,7 +22,7 @@ body {
 .react-grid-item {
   box-sizing: border-box;
 }
-.react-grid-item:not(.react-grid-placeholder):not(.react-grid-gap) {
+.react-grid-item:not(.react-grid-placeholder) {
   background: #ccc;
   border: 1px solid black;
 }
